--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-next": "13.4.10",
     "minimatch": "^9.0.3",
     "next": "13.4.10",
+    "node_module": "^0.0.0",
     "postcss": "8.4.26",
     "query-string": "^8.1.0",
     "react": "18.2.0",
@@ -30,6 +31,7 @@
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-spinners": "^0.13.8",
     "stripe": "^12.14.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
